<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LilStockApp</string>
    <string name="action_settings">Settings</string>
    <string name="stock_symbol">Enter Symbol</string>
    <string name="enter_stock_symbol">Enter</string>
    <string name="change_stock_symbol">Change</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="missing_stock_symbol">Enter a Stock Symbol</string>
    <string name="invalid_stock_symbol">Invalid Stock Symbol</string>
    <string name="delete_all_symbols">Delete All Symbols</string>
    <string name="confirm_action">Are You Sure?</string>
    <string name="yahoo_stock_url">http://finance.yahoo.com/q?s=</string>
    <string name="days_range">Daily Price Range:</string>
    <string name="ticker">Ticker</string>
    <string name="price">Price</string>
    <string name="pct_change">% Chng</string>
    <string name="day_high">Dy High</string>
    <string name="day_low">Dy Low</string>
    <string name="year_high">Yr High</string>
    <string name="year_low">Yr Low</string>
    <string name="company_name">Company</string>
    <string name="empty_value">--</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_stock_info_list">StockInfoListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="format_example">Input Format: ticker1[,ticker2,ticker3&#8230;]</string>
    <string name="transaction_data_button">Add/Edit Transaction Data</string>
    <string name="title_activity_add_edit_transaction_data">AddEditTransactionDataActivity</string>
    <string name="shares">SHARES</string>
    <string name="price_paid">PRICE</string>

</resources>
